fixed a minor bug causing x-overflow

--- a/main.css
+++ b/main.css
@@ -31,7 +31,6 @@ li {
 
 .navbox__top--logo img {
     width: 10rem;
-    top: 3em;
     padding-top: 1rem;
 }
 
